# pbi-docs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
pbi_extractor/: __init__.py  categorizer.py  cli.py  diff.py  documentation.py  extractor.py  formatters.py  i18n.py  jsonl_generator.py  processor.py
tests/: test_categorizer.py  test_i18n.py  test_processor_and_context.py
