[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbi-docs"
version = "0.1.0"
description = "Power BI documentation generator with AI-ready outputs"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Oscar Rosero", email = "orosero2405@gmail.com"}]
keywords = ["powerbi", "metadata", "dax", "documentation", "bi", "pbit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Documentation",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/orosero24/pbi-docs"
Issues = "https://github.com/orosero24/pbi-docs/issues"

[project.scripts]
pbi-docs = "pbi_extractor.cli:main"

[tool.setuptools]
packages = ["pbi_extractor"]


